--- a/css/site.css
+++ b/css/site.css
@@ -1,29 +1,17 @@
-.dc-chart g.row text {
-    fill: black;
-    font-size:0.8em;
-}
-
-.dc-chart .pie-slice {
-    fill:black;
-}
-
 .x-axis-label{
     font-size:0.8em;
 }
 .reset {
     color: black;
-    text-align: left;
-    margin-left: 100px;
+    text-align: right;
+    margin-left: 50px;
     font: bold;
 }
-/*body{
-  background-color: #1DBFB2;
-}
-*/
+
 #InfoType{
     
     margin-bottom: 30px;
-    padding-left: 50px;
+    padding-right: 50px;
     
 }
 #number-display-quote{
@@ -32,9 +20,23 @@
     margin-left: 20px;
     margin-right:30px;
 }
+#number-display-executiontime{
+    font-weight: bold;
+    font-size: 15px;
+    margin-left: 20px;
+    margin-right:30px;
+}
+#number-display-predictionoutput{
+    font-weight: bold;
+    font-size: 15px;
+    margin-left: 20px;
+    margin-right:30px;
+}
 #number-display-infotype{
     font-weight: bold;
     font-size: 15px;
+    margin-left: 20px;
+    margin-right:30px;
 }
 .form-control {
   width: 190px;
@@ -44,13 +46,12 @@
     background-color: "#1BB580";
 }
 #Likelihood{
-  padding-right: 100px;
-  padding-left: 0px;
+  padding-left: 70px;
   margin-bottom: 30px;
 
 }
 #Quote{
-  padding-left: 100px;
+  padding-left: 130px;
   margin-bottom: 30px;
 }
 #header{
@@ -60,10 +61,10 @@
     margin-bottom:5px;
 }
 #reset {
-  float:right;
+  float:left;
   margin-bottom: 10px;
-  padding-left: 20px;
-  margin-left: 1000px;
+ /* padding-left: 100px;
+  margin-left: 100px;*/
   background-color: aliceblue;
   border-color: aliceblue;
   font: bold;
@@ -81,7 +82,8 @@
 .dc-chart g.row text {
     dominant-baseline: middle;
     fill: #333;
-    font-size: 12px;
+    font-size: 10px;
+    font-family: "Source Sans Pro", sans-serif;
 }
 
 
