--- a/css/site.css
+++ b/css/site.css
@@ -8,9 +8,7 @@
     margin-top: 10px;
     margin-bottom: 20px;
 }
-h2 {
-    margin-left: 10px;
-}
+
 h2, .inline {
     font-family: 'Gotham-Bold', sans-serif;
     font-size: 16px;
@@ -18,11 +16,15 @@ h2, .inline {
     line-height: 49px;
     display: inline;
 }
+h2 {
+    margin-left: 10px;
+    font-weight: bold;
+}
 h3 {
     font-family: 'Gotham-Bold', sans-serif;
     font-size: 14px;
     line-height: 21px;
-    font-weight: normal;
+    font-weight: bold;
     margin: 0px 0px 10px;
     text-align: center;
 }
@@ -38,7 +40,6 @@ select {
     background-color: #FFF;
     border-color: #FFF;
     border-radius: 8px;
-    /* box-shadow: 0 0 8px rgba(0, 0, 0, 0.3); */
     font: 300 14px 'Source Sans Pro', sans-serif;
     white-space: pre-wrap;
     width: 150px;
@@ -57,7 +58,7 @@ select {
 }
 
 
-#number-display-quote{
+/* #number-display-quote{
     font-weight: bold;
     font-size: 15px;
     margin-left: 20px;
@@ -80,11 +81,9 @@ select {
     font-size: 15px;
     margin-left: 20px;
     margin-right:30px;
-}
-.form-control {
-  width: 190px;
+} */
 
-}
+
 .special{
     background-color: "#1BB580";
 }
